Re-introduce `autotrain-advanced` chore: added environment deps chore: added AUTOTRAIN to Framework chore: added ArgillaAutoTrainTrainer to initialization

--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -52,6 +52,7 @@ dependencies:
       - setfit
       - span_marker
       - openai
+      - autotrain-advanced
       - peft
       - trl>=0.5.0
       - rich!=13.1.0
