--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -51,7 +51,7 @@ dependencies:
       - seqeval
       - setfit
       - span_marker
-      - openai
+      - openai>=0.27.10
       - peft
       - trl>=0.5.0
       - rich!=13.1.0
