--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,7 @@ integrations = [
     "seqeval",
     "setfit",
     "span_marker",
-    "openai",
+    "openai>=0.27.10",
     "peft",
     "trl>=0.5.0"
 ]
