--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,7 @@ integrations = [
     "transformers[torch] >= 4.30.0",
     "evaluate",
     "seqeval",
+    "sentence-transformers",
     "setfit",
     "span_marker",
     "openai>=0.27.10",
