--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -54,6 +54,7 @@ dependencies:
       - openai>=0.27.10
       - peft
       - trl>=0.5.0
+      - sentence-transformers
       - rich!=13.1.0
       # install Argilla in editable mode
       - -e .[server,listeners]
