--- a/.github/workflows/run-python-tests.yml
+++ b/.github/workflows/run-python-tests.yml
@@ -77,6 +77,16 @@ jobs:
         env:
           HF_HUB_ACCESS_TOKEN: ${{ secrets.HF_HUB_ACCESS_TOKEN }}
         run: echo "Enable HF access token"
+      - name: Set huggingface hub credentials
+        if: startsWith(searchEngineDockerImage, 'docker.elastic.co')
+        env:
+          ARGILLA_SEARCH_ENGINE: elasticsearch
+        run: echo "Configure elasticsearch engine"
+      - name: Set huggingface hub credentials
+        if: startsWith(searchEngineDockerImage, 'opensearchproject')
+        env:
+          ARGILLA_SEARCH_ENGINE: opensearch
+        run: echo "Configure opensearch engine"
       - name: Run tests 📈
         run: |
           pip install -e ".[server,listeners]"
