Apply suggestions from code review
Co-authored-by: Gabriel Martín Blázquez <gmartinbdev@gmail.com>

--- a/.github/workflows/run-python-tests.yml
+++ b/.github/workflows/run-python-tests.yml
@@ -77,12 +77,12 @@ jobs:
         env:
           HF_HUB_ACCESS_TOKEN: ${{ secrets.HF_HUB_ACCESS_TOKEN }}
         run: echo "Enable HF access token"
-      - name: Set huggingface hub credentials
+      - name: Set Argilla search engine env variable
         if: startsWith(inputs.searchEngineDockerImage, 'docker.elastic.co')
         env:
           ARGILLA_SEARCH_ENGINE: elasticsearch
         run: echo "Configure elasticsearch engine"
-      - name: Set huggingface hub credentials
+      - name: Set Argilla search engine env variable
         if: startsWith(inputs.searchEngineDockerImage, 'opensearchproject')
         env:
           ARGILLA_SEARCH_ENGINE: opensearch
