--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -60,10 +60,10 @@ jobs:
             searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
             coverageReport: coverage-elasticsearch-8.0.1
             runsOn: ubuntu-latest
-          - searchEngineDockerImage: docker.elastic.co/elasticsearch/elasticsearch:7.17.11
-            searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
-            coverageReport: coverage-elasticsearch-7.17.11
-            runsOn: ubuntu-latest
+#          - searchEngineDockerImage: docker.elastic.co/elasticsearch/elasticsearch:7.17.11
+#            searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
+#            coverageReport: coverage-elasticsearch-7.17.11
+#            runsOn: ubuntu-latest
           - searchEngineDockerImage: opensearchproject/opensearch:2.4.1
             searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
             coverageReport: coverage-opensearch-2.4.1
