--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -14,6 +14,7 @@ dependencies:
   - pytest-cov
   - pytest-mock
   - pytest-asyncio
+  - pytest-env
   - factory_boy~=3.2.1
   # docs, pandoc needs conda ...
   - pandoc==2.12
