--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,7 @@ tests = [
     "pytest-cov",
     "pytest-mock",
     "pytest-asyncio",
+    "pytest-env",
     "factory_boy ~= 3.2.1",
 ]
 
@@ -144,7 +145,7 @@ log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
 log_date_format = "%Y-%m-%d %H:%M:%S"
 log_cli = "True"
 testpaths = ["tests"]
-env = ["ARGILLA_DATABASE_URL=sqlite+aiosqlite://$HOME/.argilla/test.db"]
+env = ["ARGILLA_DATABASE_URL=sqlite+aiosqlite:///{HOME}/.argilla/test.db"]
 
 
 [tool.coverage.run]
