--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -69,8 +69,20 @@ jobs:
         id: docker-image-tag-from-ref
         uses: ./.github/actions/docker-image-tag-from-ref
 
-      - name: echo output from custom action
-        run: echo "${{ steps.docker-image-tag-from-ref.outputs.docker-image-tag }}"
+      - name: Generate Docker tags
+        id: generate-docker-tags
+        run: |
+          DOCKER_HUB_TAGS="$IMAGE_NAME:$DOCKER_IMAGE_TAG"
+          GCP_REGISTRY_TAG="europe-docker.pkg.dev/argilla-ci/$IMAGE_NAME:$DOCKER_IMAGE_TAG"
+
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            DOCKER_HUB_TAGS="$DOCKER_HUB_TAGS,$IMAGE_NAME:latest"
+          fi
+
+          echo "tags=$DOCKER_HUB_TAGS,$GCP_REGISTRY_TAG" >> $GITHUB_OUTPUT
+        env:
+          IMAGE_NAME: ${{ inputs.image-name }}
+          DOCKER_IMAGE_TAG: ${{ steps.docker-image-tag-from-ref.outputs.docker-image-tag }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -100,9 +112,7 @@ jobs:
           context: docker
           file: ${{ inputs.dockerfile }}
           platforms: ${{ inputs.platforms }}
-          tags: |
-            ${{ inputs.image-name }}:${{ steps.docker-image-tag-from-ref.outputs.docker-image-tag }}
-            europe-docker.pkg.dev/argilla-ci/${{ inputs.image-name}}:${{ steps.docker-image-tag-from-ref.outputs.docker-image-tag }}
+          tags: ${{ steps.generate-docker-tags.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: ${{ inputs.build-args }}
           push: true
