ci: Disable elasticsearch engine tests

--- a/.github/workflows/run-python-tests.yml
+++ b/.github/workflows/run-python-tests.yml
@@ -79,8 +79,9 @@ jobs:
           echo "Enable HF access token"
       - name: Set Argilla search engine env variable
         if: startsWith(inputs.searchEngineDockerImage, 'docker.elastic.co')
+        # TODO(@frascuchon): Enable elasticsearch tests once the ci error is fixed
         run: |
-          echo "ARGILLA_SEARCH_ENGINE=elasticsearch" >> "$GITHUB_ENV"
+          echo "ARGILLA_SEARCH_ENGINE=None" >> "$GITHUB_ENV"
           echo "Configure elasticsearch engine"
       - name: Set Argilla search engine env variable
         if: startsWith(inputs.searchEngineDockerImage, 'opensearchproject')
