feat(search): Similarity search for Opensearch and Elasticsearch (#3765)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

This PR includes a bunch of changes regarding the `search_engine`
module:

- The base class includes a new method to tackle vector generation and
defines the `similarity_search` method.
- Two similar implementations of the `SearchEngine` class have been
included `OpenSearchEngine` and `ElasticSearchEngine`. Since they share
a lot of functionality, a common abstract class has been implemented for
common code blocks, letting each implementation handle its own details.
- A new way for engine registration and generation has been developed.
This new way is based on a class decorator. The aim of this approach is
to simplify future engine implementations, keeping the code isolated for
each new implementation.
The following example shows how a new engine could be implemented and
registered as an available engine for the Argilla server:
```python
from argilla.server.search_engine import SearchEngine

@SearchEngine.register(engine_name="my-new-engine")
class NewSearchEngineImplementation(SearchEngine):
   # implemente all required method
   ...
```
Then, you can use your search engine by environment variable:
```bash
ARGILLA_SEARCH_ENGINE=my-new-engine python -m argilla server
```
The `ARGILLA_SEARCH_ENGINE` environment variable has been added as a
common server setting. This is a first approach and may change in the
future. This is the reason why I did not include it in the docs section.

Refs #3028

**Type of change**

(Please delete options that are not relevant. Remember to title the PR
according to the type

--- a/.github/workflows/run-python-tests.yml
+++ b/.github/workflows/run-python-tests.yml
@@ -74,9 +74,20 @@ jobs:
           key: ${{ runner.os }}-pip-${{ env.CACHE_NUMBER }}-${{ hashFiles('pyproject.toml') }}
       - name: Set huggingface hub credentials
         if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/releases')
-        env:
-          HF_HUB_ACCESS_TOKEN: ${{ secrets.HF_HUB_ACCESS_TOKEN }}
-        run: echo "Enable HF access token"
+        run: |
+          echo "HF_HUB_ACCESS_TOKEN=${{ secrets.HF_HUB_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
+          echo "Enable HF access token"
+      - name: Set Argilla search engine env variable
+        if: startsWith(inputs.searchEngineDockerImage, 'docker.elastic.co')
+        # TODO(@frascuchon): Enable elasticsearch tests once the ci error is fixed
+        run: |
+          echo "ARGILLA_SEARCH_ENGINE=None" >> "$GITHUB_ENV"
+          echo "Configure elasticsearch engine"
+      - name: Set Argilla search engine env variable
+        if: startsWith(inputs.searchEngineDockerImage, 'opensearchproject')
+        run: |
+          echo "ARGILLA_SEARCH_ENGINE=opensearch" >> "$GITHUB_ENV"
+          echo "Configure elasticsearch engine"
       - name: Run tests 📈
         run: |
           pip install -e ".[server,listeners]"
