--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,19 @@
+FROM python:3.10.12-slim AS builder
+
+# Copying argilla distribution files
+COPY dist/*.whl /packages/
+RUN python -m venv /my-virtual-env
+ENV PATH="/my-virtual-env/bin:$PATH"
+RUN apt-get update && \
+    apt-get install -y python-dev-is-python3 libpq-dev gcc && \
+    pip install uvicorn[standard] && \
+    for wheel in /packages/*.whl; do pip install "$wheel"[server,postgresql]; done && \
+    apt-get remove -y python-dev-is-python3 libpq-dev gcc && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /packages
+
+
 FROM python:3.10.12-slim
 
 # Environment Variables
@@ -8,26 +24,22 @@ ENV DEFAULT_USER_API_KEY=argilla.apikey
 ENV USERS_DB=/config/.users.yml
 ENV UVICORN_PORT=6900
 
-# Copying script for starting argilla server
-COPY scripts/start_argilla_server.sh /
-
-# Copying argilla distribution files
-COPY dist/*.whl /packages/
-
-RUN apt-get update && \
-    apt-get install -y libpq-dev gcc && \
-    chmod +x /start_argilla_server.sh && \
-    for wheel in /packages/*.whl; do pip install "$wheel"[server,postgresql]; done && \
-    apt-get remove -y libpq-dev gcc && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm -rf /packages
+RUN useradd -ms /bin/bash worker
+COPY scripts/start_argilla_server.sh /home/worker
+COPY --chown=worker:worker --from=builder /my-virtual-env /home/worker/my-virtual-env
+ENV PATH="/home/worker/my-virtual-env/bin:$PATH"
 
 # Create argilla volume
-RUN mkdir -p "$ARGILLA_HOME_PATH"
+RUN mkdir -p "$ARGILLA_HOME_PATH" && \
+    chown worker:worker "$ARGILLA_HOME_PATH"
 VOLUME $ARGILLA_HOME_PATH
+
+WORKDIR /home/worker
+RUN chmod +x start_argilla_server.sh
+
+USER worker
 
 # Exposing ports
 EXPOSE 6900
 
-CMD /bin/bash /start_argilla_server.sh
+CMD /bin/bash start_argilla_server.sh
