--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -67,11 +67,11 @@ jobs:
           - searchEngineDockerImage: docker.elastic.co/elasticsearch/elasticsearch:7.17.11
             searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
             coverageReport: coverage-elasticsearch-7.17.11
-            runsOn: ubuntu-latest
+            runsOn: ubuntu-20.04
           - searchEngineDockerImage: opensearchproject/opensearch:2.4.1
             searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
             coverageReport: coverage-opensearch-2.4.1
-            runsOn: ubuntu-latest
+            runsOn: ubuntu-20.04
 #          - searchEngineDockerImage: opensearchproject/opensearch:1.3.11
 #            searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
 #            coverageReport: coverage-opensearch-1.3.11
