--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -81,7 +81,7 @@ jobs:
       searchEngineDockerEnv: ${{ matrix.searchEngineDockerEnv }}
       coverageReport: coverage
       runsOn: ${{ matrix.runsOn }}
-      pytestArgs: tests/unit
+      pytestArgs: tests/unit/server/api/v1
     secrets: inherit
 
   run_integration_tests:
