feat: add frontendChanges

--- a/.github/workflows/check-repo-files.yml
+++ b/.github/workflows/check-repo-files.yml
@@ -30,6 +30,8 @@ jobs:
               - 'tests/**'
               - 'pyproject.toml'
               - 'setup.py'
+            frontendChanges:
+              - 'frontend/**'
             buildChanges:
               - 'src/**'
               - 'frontend/**'
