--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: 🗯 Community Discussions
     url: https://join.slack.com/t/rubrixworkspace/shared_invite/zt-whigkyjn-a3IUJLD7gDbTZ0rKlvcJ5g
-    about: Our Slack Community loves to discuss about Argilla and NLP topics
+    about: Our Slack Community loves to discuss Argilla and NLP topics
