--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ tests = [
     "pytest-cov",
     "pytest-mock",
     "pytest-asyncio",
+    "pytest-env",
     "factory_boy ~= 3.2.1",
 ]
 
@@ -142,7 +143,7 @@ log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
 log_date_format = "%Y-%m-%d %H:%M:%S"
 log_cli = "True"
 testpaths = ["tests"]
-env = ["ARGILLA_DATABASE_URL=sqlite+aiosqlite://$HOME/.argilla/test.db"]
+env = ["ARGILLA_ENABLE_TELEMETRY=0"]
 
 
 [tool.coverage.run]
