--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -37,7 +37,7 @@ dependencies:
       # extra test dependencies
       - cleanlab~=2.0.0 # With this version, tests are failing
       - datasets>1.17.0,!= 2.3.2 # TODO: push_to_hub fails up to 2.3.2, check patches when they come out eventually
-      - huggingface_hub
+      - huggingface_hub>=0.5.0
       - flair>=0.12.2
       - faiss-cpu
       - flyingsquid
@@ -50,7 +50,7 @@ dependencies:
       - transformers[torch]>=4.30.0 # <- required for DPO with TRL
       - evaluate
       - seqeval
-      - setfit
+      - setfit>=0.7.0
       - span_marker
       - openai>=0.27.10
       - peft
