--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -55,7 +55,7 @@ jobs:
           - searchEngineDockerImage: docker.elastic.co/elasticsearch/elasticsearch:8.8.2
             searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
             coverageReport: coverage-elasticsearch-8.8.2
-            runsOn: ubuntu-latest
+            runsOn: extended-runner
           - searchEngineDockerImage: opensearchproject/opensearch:2.4.1
             searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
             coverageReport: coverage-opensearch-2.4.1
@@ -88,7 +88,7 @@ jobs:
             searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
             coverageReport: coverage-opensearch-1.3.11
             runsOn: extended-runner
-    name: Run unit tests
+    name: Run unit tests with extra engines
     uses: ./.github/workflows/run-python-tests.yml
     needs: check_repo_files
     if: |
@@ -101,7 +101,6 @@ jobs:
       runsOn: ${{ matrix.runsOn }}
       pytestArgs: tests/unit
     secrets: inherit
-
 
   run_integration_tests:
     name: Run integration tests
