--- a/.github/workflows/run-python-tests.yml
+++ b/.github/workflows/run-python-tests.yml
@@ -60,6 +60,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e .[server,postgresql,tests,integrations,listeners]
+          python -m spacy download en_core_web_sm
 
       - name: Set huggingface hub credentials
         if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/releases')
