--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -13,7 +13,7 @@ dependencies:
   - pytest
   - pytest-cov
   - pytest-mock
-  - pytest-asyncio
+  - pytest-asyncio!=0.22.0
   - pytest-env
   - factory_boy~=3.2.1
   # docs, pandoc needs conda ...
