--- a/k8s/helm chart/argilla/templates/argilla-server-deployment.yaml
+++ b/k8s/helm chart/argilla/templates/argilla-server-deployment.yaml
@@ -14,18 +14,20 @@ spec:
       labels:
         app: argilla-server
     spec:
+    {{- if .Values.enableOptionalResource }}
       initContainers:
         - name: wait-for-elasticsearch
           image: alpine/curl:latest
           command: [ "sh", "-c",
-            "ELASTICSEARCH_URL='http://elasticsearch:9200'; status_code=$(curl -s -o /dev/null -w '%{http_code}' $ELASTICSEARCH_URL);
+            "ELASTICSEARCH_URL={{ .Values.argilladeployment.elasticurl }}; status_code=$(curl -s -o /dev/null -w '%{http_code}' $ELASTICSEARCH_URL);
           while [ $status_code -ne 200 ]; do sleep 5; status_code=$(curl -s -o /dev/null -w '%{http_code}' $ELASTICSEARCH_URL);
           echo Sleeping...; done; echo Elasticsearch Connected " ]
+    {{- end }}
       containers:
         - name: argilla-server
           image: argilla/argilla-server:latest
           env:
-            - name: ARGILLA_ELASTICSEARCH
+            - name: {{ .Values.argilladeployment.name }}
               value: "http://elasticsearch:9200"
           ports:
             - containerPort: 6900
