--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -58,5 +58,6 @@ dependencies:
       - trl>=0.5.0
       - sentence-transformers
       - rich!=13.1.0
+      - crowd-kit>=1.2.1
       # install Argilla in editable mode
       - -e .[server,listeners]
