--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -48,6 +48,29 @@ jobs:
         run: |
           echo "is_deployable=$IS_DEPLOYABLE" >> $GITHUB_OUTPUT
 
+  install_pip_dependencies:
+    runs-on: ubuntu-latest
+    needs: check_repo_files
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+
+      - uses: actions/cache@v3
+        id: cache
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ runner.os }}-python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}-test
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -e .[server,postgresql,tests,integrations,listeners]
+          python -m spacy download en_core_web_sm
+
   run_unit_tests:
     strategy:
       matrix:
@@ -74,7 +97,9 @@ jobs:
           #   runsOn: ubuntu-latest
     name: Run unit tests
     uses: ./.github/workflows/run-python-tests.yml
-    needs: check_repo_files
+    needs:
+      - check_repo_files
+      - install_pip_dependencies
     # if: needs.check_repo_files.outputs.pythonChanges == 'true'
     with:
       searchEngineDockerImage: ${{ matrix.searchEngineDockerImage }}
@@ -119,6 +144,7 @@ jobs:
     uses: ./.github/workflows/run-python-tests.yml
     needs:
       - check_repo_files
+      - install_pip_dependencies
     if: needs.check_repo_files.outputs.pythonChanges == 'true'
     with:
       runsOn: extended-runner
