--- a/.github/workflows/build-python-package.yml
+++ b/.github/workflows/build-python-package.yml
@@ -8,24 +8,18 @@ jobs:
     name: Build the python package
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code 🛎
-        uses: actions/checkout@v3
-      - name: Cache pip 👜
-        uses: actions/cache@v3
-        env:
-          # Increase this value to reset cache if pyproject.toml has not changed
-          CACHE_NUMBER: 0
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ env.CACHE_NUMBER }}-${{ hashFiles('pyproject.toml') }}
+      - uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18"
+
       - name: Build Package 🍟
         run: |
           pip install -U build
           scripts/build_distribution.sh
+
       - name: Upload package artifact
         uses: actions/upload-artifact@v3
         with:
