--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -48,28 +48,10 @@ jobs:
         run: |
           echo "is_deployable=$IS_DEPLOYABLE" >> $GITHUB_OUTPUT
 
-  install_pip_dependencies:
-    runs-on: ubuntu-latest
+  install_python_dependencies:
+    name: Install and cache Python dependencies
+    uses: ./.github/workflows/install-python-dependencies.yml
     needs: check_repo_files
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.9"
-
-      - uses: actions/cache@v3
-        id: cache
-        with:
-          path: ${{ env.pythonLocation }}
-          key: ${{ runner.os }}-python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}-test
-
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e .[server,postgresql,tests,integrations,listeners]
-          python -m spacy download en_core_web_sm
 
   run_unit_tests:
     strategy:
@@ -99,7 +81,7 @@ jobs:
     uses: ./.github/workflows/run-python-tests.yml
     needs:
       - check_repo_files
-      - install_pip_dependencies
+      - install_python_dependencies
     # if: needs.check_repo_files.outputs.pythonChanges == 'true'
     with:
       searchEngineDockerImage: ${{ matrix.searchEngineDockerImage }}
@@ -144,7 +126,7 @@ jobs:
     uses: ./.github/workflows/run-python-tests.yml
     needs:
       - check_repo_files
-      - install_pip_dependencies
+      - install_python_dependencies
     if: needs.check_repo_files.outputs.pythonChanges == 'true'
     with:
       runsOn: extended-runner
