--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -53,7 +53,7 @@ dependencies:
       - seqeval
       - setfit>=0.7.0
       - span_marker
-      - openai>=0.27.10
+      - openai>=0.27.10,<1.0.0
       - peft
       - trl>=0.5.0
       - sentence-transformers
