--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,6 +14,8 @@ on:
       - "main"
       - "develop"
       - "releases/**"
+    tags:
+      - "*"
   pull_request:
     branches:
       - "main"
