--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,6 +110,8 @@ integrations = [
     "openai>=0.27.10,<1.0.0",
     "peft",
     "trl>=0.5.0",
+    # To find the a notebook name from within a notebook
+    "ipynbname"
 ]
 tests = [
     "pytest",
