--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,7 +110,7 @@ integrations = [
     "openai>=0.27.10,<1.0.0",
     "peft",
     "trl>=0.5.0",
-    # To find the a notebook name from within a notebook
+    # To find the notebook name from within a notebook
     "ipynbname"
 ]
 tests = [
