--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,7 @@ integrations = [
     "sentence-transformers",
     "setfit>=0.7.0",
     "span_marker",
+    "textdescriptives>=2.7.0",
     "openai>=0.27.10",
     "peft",
     "trl>=0.5.0",
